bootstrapping the app

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
-    <app>loading...</app>
+    <pwa-app>loading...</pwa-app>
   </body>
 </html>
