--- a/src/index.html
+++ b/src/index.html
@@ -64,5 +64,17 @@
 <pwa-app>
   <div class="loader"></div>
 </pwa-app>
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function () {
+      navigator.serviceWorker.register('/sw.js').then(function (registration) {
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }).catch(function (err) {
+        console.log('ServiceWorker registration failed: ', err);
+      });
+      ;
+    });
+  }
+</script>
 </body>
 </html>
